Upgrade to Silverstripe 4

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,6 +1,6 @@
 ---
 Name: consent-forms
 ---
-Form:
+SilverStripe\Forms\Form:
   extensions:
-    - ConsentFormExtension
+    - Mouseketeers\ConsentForms\ConsentFormExtension
