--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mouseketeers/consent-forms",
     "description": "A SilverStripe module to handle user consents in forms",
-    "type": "silverstripe-module",
+    "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
         "consent",
@@ -15,8 +15,16 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "^3.6",
         "mouseketeers/consent-records": "@dev"
     },
-    "minimum-stability": "stable"
+    "config": {
+        "process-timeout": 600
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "Mouseketeers\\ConsentForms\\": "src/"
+        }
+    }     
 }
